--- a/ClienteApp/package.json
+++ b/ClienteApp/package.json
@@ -21,6 +21,11 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "admin-lte": "2.3.11",
+    "core-js": "2.4.1",
+    "font-awesome": "4.7.0",
+    "intl": "1.2.5",
+    "jquery": "3.1.1",
     "core-js": "^2.4.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
