--- a/ClienteApp/package.json
+++ b/ClienteApp/package.json
@@ -12,21 +12,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.4",
+    "@angular/animations": "^4.4.6",
+    "@angular/cdk": "^5.0.2",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
+    "@angular/material": "^5.0.2",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.8",
     "admin-lte": "2.3.11",
-    "core-js": "2.4.1",
+    "angular4-datepicker": "^1.0.1",
+    "core-js": "^2.4.1",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "font-awesome": "4.7.0",
     "intl": "1.2.5",
-    "jquery": "3.1.1",
-    "core-js": "^2.4.1",
+    "jquery": "^3.2.1",
+    "ng2-datepicker-bootstrap": "^1.0.0",
+    "ng2-datetime": "^1.4.0",
+    "ngx-bootstrap": "^2.0.0-rc.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
@@ -36,6 +43,7 @@
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.2.17",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.1.1",
     "jasmine-core": "~2.6.2",
