--- a/ClienteApp/src/tsconfig.app.json
+++ b/ClienteApp/src/tsconfig.app.json
@@ -4,10 +4,13 @@
     "outDir": "../out-tsc/app",
     "baseUrl": "./",
     "module": "es2015",
-    "types": []
+    "types": [
+      "jquery"
+      ]
   },
   "exclude": [
     "test.ts",
-    "**/*.spec.ts"
+    "**/*.spec.ts",
+    "../node_modules/ng2-datetime/ng2-datetime.ts"
   ]
 }
