--- a/ClienteApp/package.json
+++ b/ClienteApp/package.json
@@ -34,6 +34,7 @@
     "ng2-datepicker-bootstrap": "^1.0.0",
     "ng2-datetime": "^1.4.0",
     "ngx-bootstrap": "^2.0.0-rc.0",
+    "ngx-pagination": "^3.0.3",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
