--- a/Server/package.json
+++ b/Server/package.json
@@ -6,9 +6,11 @@
     "author": "Abel Lopes",
     "dependencies": {
         "express": "~4.7.2",
-        "mongoose": "~3.6.2",
-        "morgan": "~1.2.2",
+        "mongoose": "~3.6.2",      
         "body-parser": "~1.5.2",
         "method-override": "~2.1.2"
+    },
+    "devDependencies": {
+          "morgan": "~1.2.2"
     }
 }
